----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2003-07-14 Alexander M. Turek  <rabus@users.sourceforge.net>
    * libraries/sqlparser.data.php3: SHOW BINLOG EVENTS.

2003-07-14 Marc Delisle  <lem9@users.sourceforge.net>
    ### 2.5.2-rc2 released

2003-07-12 Marc Delisle  <lem9@users.sourceforge.net>
    * mult_submit.inc.php3: bug 770095, error in multiple TRUNCATEs
    * lang/estonian update, thanks to finsoft@sourceforge.net.

2003-07-11 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/turkish update, thanks to Bora Alioglu
    * lang/slovak update, thanks to Lubos Klokner

2003-07-11 Alexander M. Turek  <rabus@users.sourceforge.net>
    * db_create.php3:
      - Display CREATE DATABASE query;
      - Call user-defined default tab instead of hardcoded db_details.php3.
    * index.php3: Don't display scrollbars in queryframe (Opera fix).
    * libraries/display_export.lib.php3: Disabled XML export for multiple
      databases because an XML file must not contain more than one database.

2003-07-10 Garvin Hicking <me@supergarv.de>
    * libraries/display_tbl.lib.php3: Let the default function take
      the honor to replace special strings, so that a non-default function
      does not necessary have them introduced. Very convenient for the
      text/plain->formatted display, which would otherwise get every
      CR/LF converted to a <br> and introduce nasty skew.

2003-07-10 Marc Delisle  <lem9@users.sourceforge.net>
    * pdf_schema.php3: do not display a foreign table if it's not selected
      by user to be on the schema

2003-07-10 Michal Cihar  <nijel@users.sourceforge.net>
    * lang/spanish: Updated, thanks to Daniel Hinostroza (dhinostroza).
    * lang/italian: Updated, thanks to Pietro Danesi (danone).
    * footer.inc.php3: Fix JS error when in query window is not active SQL
      tab.

2003-07-09 Michal Cihar  <nijel@users.sourceforge.net>