@@ -1847,6 +1847,8 @@ want the output stored in.</p><br />
 consult your <i>&lt;www.your-host.com&gt;/&lt;your-install-dir&gt;/libraries/transformations/overview.php3</i>
 installation.</p>
 
+<p><br />For a tutorial on how to effectively use transformations, see our <a href="http://www.phpmyadmin.net/#links">Link section</a> on the official phpMyAdmin-homepage.</p>
+
 <a name="transformationshowto"></a><br />
 <h3>[2. Usage]</h3>
 
@@ -2022,6 +2024,10 @@ To create a new, empty mimetype please see libraries/transformations/template_ge
 <a href="#faqsecurity">Security</a>
 </p>
 
+<p><br />
+   Please have a look at our <a href="http://www.phpmyadmin.net/#links">Link section</a> on the official phpMyAdmin homepage for in-depth coverage of phpMyAdmin's features and/or interface.
+</p>
+   
 <a name="faqserver"></a><br />
 <h3>[1. Server]</h3>
 
